--- a/styles/app.css
+++ b/styles/app.css
@@ -1,4 +1,8 @@
 body{
     background-color: paleturquoise;
     font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
